--- a/index.css
+++ b/index.css
@@ -91,7 +91,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    padding-top: 40px;
     margin-bottom: 10px;
 }
 .footer_left li{
