--- a/home.css
+++ b/home.css
@@ -52,7 +52,7 @@
     display: flex;
     justify-content: center;
 
-}contact_us_p
+}
 
 .about_app_inner {
     width: 60%;
@@ -69,7 +69,7 @@
 
 .about_app_inner_items {
     margin: 30px;
-    width: 30%;
+    width: 35%;
     text-align: center;
 }
 
@@ -124,7 +124,7 @@
         justify-content: center;
     }
     .about_app_inner{
-        width: 80%;
+        width: 85%;
     }
 
 }
@@ -175,8 +175,8 @@
         text-align: center;
     }
     .about_app_inner_items{
-        width: 40%;
-        margin: 0;
+        width: 50%;
+        margin: 30px 0 ;
     }
 
     .about_stadium{
